# biopipeline

./: CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
biopipeline/: __init__.py  alignment.py  cli.py  config.py  io.py  pipeline.py  sequence.py  utils.py
examples/: alignment_demo.py  gc_analysis.py
tests/: test_io.py  test_pipeline.py  test_sequence.py
