[build-system]
requires = ["setuptools>=65","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biopipeline"
version = "0.1.0"
description = "A modular Python toolkit for bioinformatics data processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["tqdm>=4.64","pyyaml>=6.0","numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0","pytest-cov","mypy","ruff"]

[project.scripts]
biopipeline = "biopipeline.cli:main"
